# K_Means

./: CMakeLists.txt  Cluster.h  Point.h  README.md  parallel_main.cpp  sequential_main.cpp
